--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<app-header></app-header>
+<app-header (featureSelected) = "onNavigate($event)"></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-recipes></app-recipes>
-      <app-shoping-list></app-shoping-list>
+      <app-recipes *ngIf="loadedFeature === 'recipes'"></app-recipes>
+      <app-shoping-list *ngIf="loadedFeature != 'recipes'"></app-shoping-list>
     </div>
   </div>
 </div>
