--- a/src/app/shoping-list/shoping-list.component.html
+++ b/src/app/shoping-list/shoping-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xx-10">
-        <app-shoping-edit></app-shoping-edit>
+        <app-shoping-edit (onNewIngredientAdded) = "onAddIngredient($event)"></app-shoping-edit>
         <hr>
         <ul class="list-group">
             <a 
