--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-12">
       <app-recipes *ngIf="loadedFeature === 'recipes'"></app-recipes>
-      <app-shoping-list *ngIf="loadedFeature != 'recipes'"></app-shoping-list>
+      <app-shopping-list *ngIf="loadedFeature != 'recipes'"></app-shopping-list>
     </div>
   </div>
 </div>
