--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -19,10 +19,10 @@
                 Manage Recipe <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
-                <li><a href="#"
+                <li><a style="cursor : pointer"
                     (click) = "onSendToShoppingList()">To Shopping List</a></li>
-                <li><a href="#">Edit Recipe</a></li>
-                <li><a href="#">Delete Recipe</a></li>
+                <li><a style="cursor : pointer" routerLink="edit">Edit Recipe</a></li>
+                <li><a style="cursor : pointer">Delete Recipe</a></li>
             </ul>
         </div>
     </div>
