--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -22,7 +22,7 @@
                 <li><a style="cursor : pointer"
                     (click) = "onSendToShoppingList()">To Shopping List</a></li>
                 <li><a style="cursor : pointer" routerLink="edit">Edit Recipe</a></li>
-                <li><a style="cursor : pointer">Delete Recipe</a></li>
+                <li><a style="cursor : pointer" (click)="onDeleteRecipe()">Delete Recipe</a></li>
             </ul>
         </div>
     </div>
