--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,18 +1,25 @@
 <div class="row">
     <div class="col-xs-12">
-        <form>
+        <form (ngSubmit) = "onAddIngredient()" #form="ngForm" >
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
                     <input type="text" 
                         id="name" 
+                        ngModel
+                        name="name"
                         class="form-control"
+                        required
                         #nameInput>
                 </div>
                 <div class="col-sm-2 form-group">
                     <label for="amount">Amount</label>
                     <input type="number" 
                         id="amount" 
+                        ngModel
+                        required
+                        pattern="^[0-9]+[0-9]*$"
+                        name="amount"
                         class="form-control"
                         #amountInput>
                 </div>
@@ -21,9 +28,13 @@
                 <div class="col-xs-12">
                     <button class="btn btn-success" 
                         type="submit"
-                        (click) = "onAddIngredient()">Add</button>
-                    <button class="btn btn-danger" type="button">Delete</button>
-                    <button class="btn btn-danger" type="button">Clear</button>
+                        [disabled]= "!form.valid">{{ editMode ? 'Update' : 'Add'}}</button>
+                    <button 
+                        class="btn btn-danger" 
+                        type="button" 
+                        (click) = "onDelete()"
+                        *ngIf = "editMode">Delete</button>
+                    <button class="btn btn-danger" type="button" (click) = "onClear()">Clear</button>
                 </div>
             </div>
         </form>
